InterpreterOLC1/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    RCASE
    RCONTINUE
    RDEFAULT
    RFOR
    RLENGTH
    RREAD
    RRETURN
    RROUND
    RSWITCH
    RTOLOWER
    RTOUPPER
    RTRUNCATE
    RTYPEOF

Grammar

Rule 0     S' -> init
Rule 1     init -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> imprimir_instr finins
Rule 5     instruccion -> declaracion_instr finins
Rule 6     instruccion -> declaracion2_instr finins
Rule 7     instruccion -> asignacion_instr finins
Rule 8     instruccion -> asignacion2_instr finins
Rule 9     instruccion -> if_instr
Rule 10    instruccion -> while_instr
Rule 11    instruccion -> break_instr finins
Rule 12    instruccion -> main_instr
Rule 13    instruccion -> funcion_instr
Rule 14    instruccion -> llamada_instr finins
Rule 15    finins -> PUNTOCOMA
Rule 16    finins -> <empty>
Rule 17    instruccion -> error PUNTOCOMA
Rule 18    while_instr -> RWHILE PARA expresion PARC LLAVEA instrucciones LLAVEC
Rule 19    break_instr -> RBREAK
Rule 20    imprimir_instr -> RPRINT PARA expresion PARC PUNTOCOMA
Rule 21    imprimir_instr -> RPRINT PARA expresion PARC
Rule 22    declaracion_instr -> tipo ID IGUAL expresion
Rule 23    declaracion2_instr -> tipo ID
Rule 24    asignacion_instr -> ID IGUAL expresion
Rule 25    asignacion2_instr -> ID expresion
Rule 26    if_instr -> RIF PARA expresion PARC LLAVEA instrucciones LLAVEC
Rule 27    if_instr -> RIF PARA expresion PARC LLAVEA instrucciones LLAVEC RELSE LLAVEA instrucciones LLAVEC
Rule 28    if_instr -> RIF PARA expresion PARC LLAVEA instrucciones LLAVEC RELSE if_instr
Rule 29    main_instr -> RMAIN PARA PARC LLAVEA instrucciones LLAVEC
Rule 30    funcion_instr -> RFUNC ID PARA PARC LLAVEA instrucciones LLAVEC
Rule 31    llamada_instr -> ID PARA PARC
Rule 32    tipo -> RINT
Rule 33    tipo -> RDOUBLE
Rule 34    tipo -> RCHAR
Rule 35    tipo -> RSTRING
Rule 36    tipo -> RVAR
Rule 37    tipo -> RBOOLEAN
Rule 38    expresion -> expresion MAS expresion
Rule 39    expresion -> expresion MENOS expresion
Rule 40    expresion -> expresion POR expresion
Rule 41    expresion -> expresion DIV expresion
Rule 42    expresion -> expresion POT expresion
Rule 43    expresion -> expresion MOD expresion
Rule 44    expresion -> expresion MENORQUE expresion
Rule 45    expresion -> expresion MAYORQUE expresion
Rule 46    expresion -> expresion MENORIGUAL expresion
Rule 47    expresion -> expresion MAYORIGUAL expresion
Rule 48    expresion -> expresion DIFERENTE expresion
Rule 49    expresion -> expresion IGUALIGUAL expresion
Rule 50    expresion -> expresion AND expresion
Rule 51    expresion -> expresion OR expresion
Rule 52    expresion -> expresion INCREMENTO
Rule 53    expresion -> expresion DECREMENTO
Rule 54    expresion -> MENOS expresion
Rule 55    expresion -> NOT expresion
Rule 56    expresion -> PARA expresion PARC
Rule 57    expresion -> ID
Rule 58    expresion -> ENTERO
Rule 59    expresion -> DECIMAL
Rule 60    expresion -> CADENA
Rule 61    expresion -> CHARACTER
Rule 62    expresion -> BOOLEANO
Rule 63    expresion -> RNULL
Rule 64    expresion -> INCREMENTO
Rule 65    expresion -> DECREMENTO

Terminals, with rules where they appear

AND                  : 50
BOOLEANO             : 62
CADENA               : 60
CHARACTER            : 61
DECIMAL              : 59
DECREMENTO           : 53 65
DIFERENTE            : 48
DIV                  : 41
ENTERO               : 58
ID                   : 22 23 24 25 30 31 57
IGUAL                : 22 24
IGUALIGUAL           : 49
INCREMENTO           : 52 64
LLAVEA               : 18 26 27 27 28 29 30
LLAVEC               : 18 26 27 27 28 29 30
MAS                  : 38
MAYORIGUAL           : 47
MAYORQUE             : 45
MENORIGUAL           : 46
MENORQUE             : 44
MENOS                : 39 54
MOD                  : 43
NOT                  : 55
OR                   : 51
PARA                 : 18 20 21 26 27 28 29 30 31 56
PARC                 : 18 20 21 26 27 28 29 30 31 56
POR                  : 40
POT                  : 42
PUNTOCOMA            : 15 17 20
RBOOLEAN             : 37
RBREAK               : 19
RCASE                : 
RCHAR                : 34
RCONTINUE            : 
RDEFAULT             : 
RDOUBLE              : 33
RELSE                : 27 28
RFOR                 : 
RFUNC                : 30
RIF                  : 26 27 28
RINT                 : 32
RLENGTH              : 
RMAIN                : 29
RNULL                : 63
RPRINT               : 20 21
RREAD                : 
RRETURN              : 
RROUND               : 
RSTRING              : 35
RSWITCH              : 
RTOLOWER             : 
RTOUPPER             : 
RTRUNCATE            : 
RTYPEOF              : 
RVAR                 : 36
RWHILE               : 18
error                : 17

Nonterminals, with rules where they appear

asignacion2_instr    : 8
asignacion_instr     : 7
break_instr          : 11
declaracion2_instr   : 6
declaracion_instr    : 5
expresion            : 18 20 21 22 24 25 26 27 28 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 53 54 55 56
finins               : 4 5 6 7 8 11 14
funcion_instr        : 13
if_instr             : 9 28
imprimir_instr       : 4
init                 : 0
instruccion          : 2 3
instrucciones        : 1 2 18 26 27 27 28 29 30
llamada_instr        : 14
main_instr           : 12
tipo                 : 22 23
while_instr          : 10

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . imprimir_instr finins
    (5) instruccion -> . declaracion_instr finins
    (6) instruccion -> . declaracion2_instr finins
    (7) instruccion -> . asignacion_instr finins
    (8) instruccion -> . asignacion2_instr finins
    (9) instruccion -> . if_instr
    (10) instruccion -> . while_instr
    (11) instruccion -> . break_instr finins
    (12) instruccion -> . main_instr
    (13) instruccion -> . funcion_instr
    (14) instruccion -> . llamada_instr finins
    (17) instruccion -> . error PUNTOCOMA
    (20) imprimir_instr -> . RPRINT PARA expresion PARC PUNTOCOMA
    (21) imprimir_instr -> . RPRINT PARA expresion PARC
    (22) declaracion_instr -> . tipo ID IGUAL expresion
    (23) declaracion2_instr -> . tipo ID
    (24) asignacion_instr -> . ID IGUAL expresion
    (25) asignacion2_instr -> . ID expresion
    (26) if_instr -> . RIF PARA expresion PARC LLAVEA instrucciones LLAVEC
    (27) if_instr -> . RIF PARA expresion PARC LLAVEA instrucciones LLAVEC RELSE LLAVEA instrucciones LLAVEC
    (28) if_instr -> . RIF PARA expresion PARC LLAVEA instrucciones LLAVEC RELSE if_instr
    (18) while_instr -> . RWHILE PARA expresion PARC LLAVEA instrucciones LLAVEC
    (19) break_instr -> . RBREAK
    (29) main_instr -> . RMAIN PARA PARC LLAVEA instrucciones LLAVEC
    (30) funcion_instr -> . RFUNC ID PARA PARC LLAVEA instrucciones LLAVEC
    (31) llamada_instr -> . ID PARA PARC
    (32) tipo -> . RINT
    (33) tipo -> . RDOUBLE
    (34) tipo -> . RCHAR
    (35) tipo -> . RSTRING
    (36) tipo -> . RVAR
    (37) tipo -> . RBOOLEAN

    error           shift and go to state 15
    RPRINT          shift and go to state 16
    ID              shift and go to state 18
    RIF             shift and go to state 19
    RWHILE          shift and go to state 20
    RBREAK          shift and go to state 21
    RMAIN           shift and go to state 22
    RFUNC           shift and go to state 23
    RINT            shift and go to state 24
    RDOUBLE         shift and go to state 25
    RCHAR           shift and go to state 26
    RSTRING         shift and go to state 27
    RVAR            shift and go to state 28
    RBOOLEAN        shift and go to state 29

    init                           shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    imprimir_instr                 shift and go to state 4
    declaracion_instr              shift and go to state 5
    declaracion2_instr             shift and go to state 6
    asignacion_instr               shift and go to state 7
    asignacion2_instr              shift and go to state 8
    if_instr                       shift and go to state 9
    while_instr                    shift and go to state 10
    break_instr                    shift and go to state 11
    main_instr                     shift and go to state 12
    funcion_instr                  shift and go to state 13
    llamada_instr                  shift and go to state 14
    tipo                           shift and go to state 17

state 1

    (0) S' -> init .



state 2

    (1) init -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . imprimir_instr finins
    (5) instruccion -> . declaracion_instr finins
    (6) instruccion -> . declaracion2_instr finins
    (7) instruccion -> . asignacion_instr finins
    (8) instruccion -> . asignacion2_instr finins
    (9) instruccion -> . if_instr
    (10) instruccion -> . while_instr
    (11) instruccion -> . break_instr finins
    (12) instruccion -> . main_instr
    (13) instruccion -> . funcion_instr
    (14) instruccion -> . llamada_instr finins
    (17) instruccion -> . error PUNTOCOMA
    (20) imprimir_instr -> . RPRINT PARA expresion PARC PUNTOCOMA
    (21) imprimir_instr -> . RPRINT PARA expresion PARC
    (22) declaracion_instr -> . tipo ID IGUAL expresion
    (23) declaracion2_instr -> . tipo ID
    (24) asignacion_instr -> . ID IGUAL expresion
    (25) asignacion2_instr -> . ID expresion
    (26) if_instr -> . RIF PARA expresion PARC LLAVEA instrucciones LLAVEC
    (27) if_instr -> . RIF PARA expresion PARC LLAVEA instrucciones LLAVEC RELSE LLAVEA instrucciones LLAVEC
    (28) if_instr -> . RIF PARA expresion PARC LLAVEA instrucciones LLAVEC RELSE if_instr
    (18) while_instr -> . RWHILE PARA expresion PARC LLAVEA instrucciones LLAVEC
    (19) break_instr -> . RBREAK
    (29) main_instr -> . RMAIN PARA PARC LLAVEA instrucciones LLAVEC
    (30) funcion_instr -> . RFUNC ID PARA PARC LLAVEA instrucciones LLAVEC
    (31) llamada_instr -> . ID PARA PARC
    (32) tipo -> . RINT
    (33) tipo -> . RDOUBLE
    (34) tipo -> . RCHAR
    (35) tipo -> . RSTRING
    (36) tipo -> . RVAR
    (37) tipo -> . RBOOLEAN

    $end            reduce using rule 1 (init -> instrucciones .)
    error           shift and go to state 15
    RPRINT          shift and go to state 16
    ID              shift and go to state 18
    RIF             shift and go to state 19
    RWHILE          shift and go to state 20
    RBREAK          shift and go to state 21
    RMAIN           shift and go to state 22
    RFUNC           shift and go to state 23
    RINT            shift and go to state 24
    RDOUBLE         shift and go to state 25
    RCHAR           shift and go to state 26
    RSTRING         shift and go to state 27
    RVAR            shift and go to state 28
    RBOOLEAN        shift and go to state 29

    instruccion                    shift and go to state 30
    imprimir_instr                 shift and go to state 4
    declaracion_instr              shift and go to state 5
    declaracion2_instr             shift and go to state 6
    asignacion_instr               shift and go to state 7
    asignacion2_instr              shift and go to state 8
    if_instr                       shift and go to state 9
    while_instr                    shift and go to state 10
    break_instr                    shift and go to state 11
    main_instr                     shift and go to state 12
    funcion_instr                  shift and go to state 13
    llamada_instr                  shift and go to state 14
    tipo                           shift and go to state 17

state 3

    (3) instrucciones -> instruccion .

    error           reduce using rule 3 (instrucciones -> instruccion .)
    RPRINT          reduce using rule 3 (instrucciones -> instruccion .)
    ID              reduce using rule 3 (instrucciones -> instruccion .)
    RIF             reduce using rule 3 (instrucciones -> instruccion .)
    RWHILE          reduce using rule 3 (instrucciones -> instruccion .)
    RBREAK          reduce using rule 3 (instrucciones -> instruccion .)
    RMAIN           reduce using rule 3 (instrucciones -> instruccion .)
    RFUNC           reduce using rule 3 (instrucciones -> instruccion .)
    RINT            reduce using rule 3 (instrucciones -> instruccion .)
    RDOUBLE         reduce using rule 3 (instrucciones -> instruccion .)
    RCHAR           reduce using rule 3 (instrucciones -> instruccion .)
    RSTRING         reduce using rule 3 (instrucciones -> instruccion .)
    RVAR            reduce using rule 3 (instrucciones -> instruccion .)
    RBOOLEAN        reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)
    LLAVEC          reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> imprimir_instr . finins
    (15) finins -> . PUNTOCOMA
    (16) finins -> .

    PUNTOCOMA       shift and go to state 32
    error           reduce using rule 16 (finins -> .)
    RPRINT          reduce using rule 16 (finins -> .)
    ID              reduce using rule 16 (finins -> .)
    RIF             reduce using rule 16 (finins -> .)
    RWHILE          reduce using rule 16 (finins -> .)
    RBREAK          reduce using rule 16 (finins -> .)
    RMAIN           reduce using rule 16 (finins -> .)
    RFUNC           reduce using rule 16 (finins -> .)
    RINT            reduce using rule 16 (finins -> .)
    RDOUBLE         reduce using rule 16 (finins -> .)
    RCHAR           reduce using rule 16 (finins -> .)
    RSTRING         reduce using rule 16 (finins -> .)
    RVAR            reduce using rule 16 (finins -> .)
    RBOOLEAN        reduce using rule 16 (finins -> .)
    $end            reduce using rule 16 (finins -> .)
    LLAVEC          reduce using rule 16 (finins -> .)

    finins                         shift and go to state 31

state 5

    (5) instruccion -> declaracion_instr . finins
    (15) finins -> . PUNTOCOMA
    (16) finins -> .

    PUNTOCOMA       shift and go to state 32
    error           reduce using rule 16 (finins -> .)
    RPRINT          reduce using rule 16 (finins -> .)
    ID              reduce using rule 16 (finins -> .)
    RIF             reduce using rule 16 (finins -> .)
    RWHILE          reduce using rule 16 (finins -> .)
    RBREAK          reduce using rule 16 (finins -> .)
    RMAIN           reduce using rule 16 (finins -> .)
    RFUNC           reduce using rule 16 (finins -> .)
    RINT            reduce using rule 16 (finins -> .)
    RDOUBLE         reduce using rule 16 (finins -> .)
    RCHAR           reduce using rule 16 (finins -> .)
    RSTRING         reduce using rule 16 (finins -> .)
    RVAR            reduce using rule 16 (finins -> .)
    RBOOLEAN        reduce using rule 16 (finins -> .)
    $end            reduce using rule 16 (finins -> .)
    LLAVEC          reduce using rule 16 (finins -> .)

    finins                         shift and go to state 33

state 6

    (6) instruccion -> declaracion2_instr . finins
    (15) finins -> . PUNTOCOMA
    (16) finins -> .

    PUNTOCOMA       shift and go to state 32
    error           reduce using rule 16 (finins -> .)
    RPRINT          reduce using rule 16 (finins -> .)
    ID              reduce using rule 16 (finins -> .)
    RIF             reduce using rule 16 (finins -> .)
    RWHILE          reduce using rule 16 (finins -> .)
    RBREAK          reduce using rule 16 (finins -> .)
    RMAIN           reduce using rule 16 (finins -> .)
    RFUNC           reduce using rule 16 (finins -> .)
    RINT            reduce using rule 16 (finins -> .)
    RDOUBLE         reduce using rule 16 (finins -> .)
    RCHAR           reduce using rule 16 (finins -> .)
    RSTRING         reduce using rule 16 (finins -> .)
    RVAR            reduce using rule 16 (finins -> .)
    RBOOLEAN        reduce using rule 16 (finins -> .)
    $end            reduce using rule 16 (finins -> .)
    LLAVEC          reduce using rule 16 (finins -> .)

    finins                         shift and go to state 34

state 7

    (7) instruccion -> asignacion_instr . finins
    (15) finins -> . PUNTOCOMA
    (16) finins -> .

    PUNTOCOMA       shift and go to state 32
    error           reduce using rule 16 (finins -> .)
    RPRINT          reduce using rule 16 (finins -> .)
    ID              reduce using rule 16 (finins -> .)
    RIF             reduce using rule 16 (finins -> .)
    RWHILE          reduce using rule 16 (finins -> .)
    RBREAK          reduce using rule 16 (finins -> .)
    RMAIN           reduce using rule 16 (finins -> .)
    RFUNC           reduce using rule 16 (finins -> .)
    RINT            reduce using rule 16 (finins -> .)
    RDOUBLE         reduce using rule 16 (finins -> .)
    RCHAR           reduce using rule 16 (finins -> .)
    RSTRING         reduce using rule 16 (finins -> .)
    RVAR            reduce using rule 16 (finins -> .)
    RBOOLEAN        reduce using rule 16 (finins -> .)
    $end            reduce using rule 16 (finins -> .)
    LLAVEC          reduce using rule 16 (finins -> .)

    finins                         shift and go to state 35

state 8

    (8) instruccion -> asignacion2_instr . finins
    (15) finins -> . PUNTOCOMA
    (16) finins -> .

    PUNTOCOMA       shift and go to state 32
    error           reduce using rule 16 (finins -> .)
    RPRINT          reduce using rule 16 (finins -> .)
    ID              reduce using rule 16 (finins -> .)
    RIF             reduce using rule 16 (finins -> .)
    RWHILE          reduce using rule 16 (finins -> .)
    RBREAK          reduce using rule 16 (finins -> .)
    RMAIN           reduce using rule 16 (finins -> .)
    RFUNC           reduce using rule 16 (finins -> .)
    RINT            reduce using rule 16 (finins -> .)
    RDOUBLE         reduce using rule 16 (finins -> .)
    RCHAR           reduce using rule 16 (finins -> .)
    RSTRING         reduce using rule 16 (finins -> .)
    RVAR            reduce using rule 16 (finins -> .)
    RBOOLEAN        reduce using rule 16 (finins -> .)
    $end            reduce using rule 16 (finins -> .)
    LLAVEC          reduce using rule 16 (finins -> .)

    finins                         shift and go to state 36

state 9

    (9) instruccion -> if_instr .

    error           reduce using rule 9 (instruccion -> if_instr .)
    RPRINT          reduce using rule 9 (instruccion -> if_instr .)
    ID              reduce using rule 9 (instruccion -> if_instr .)
    RIF             reduce using rule 9 (instruccion -> if_instr .)
    RWHILE          reduce using rule 9 (instruccion -> if_instr .)
    RBREAK          reduce using rule 9 (instruccion -> if_instr .)
    RMAIN           reduce using rule 9 (instruccion -> if_instr .)
    RFUNC           reduce using rule 9 (instruccion -> if_instr .)
    RINT            reduce using rule 9 (instruccion -> if_instr .)
    RDOUBLE         reduce using rule 9 (instruccion -> if_instr .)
    RCHAR           reduce using rule 9 (instruccion -> if_instr .)
    RSTRING         reduce using rule 9 (instruccion -> if_instr .)
    RVAR            reduce using rule 9 (instruccion -> if_instr .)
    RBOOLEAN        reduce using rule 9 (instruccion -> if_instr .)
    $end            reduce using rule 9 (instruccion -> if_instr .)
    LLAVEC          reduce using rule 9 (instruccion -> if_instr .)


state 10

    (10) instruccion -> while_instr .

    error           reduce using rule 10 (instruccion -> while_instr .)
    RPRINT          reduce using rule 10 (instruccion -> while_instr .)
    ID              reduce using rule 10 (instruccion -> while_instr .)
    RIF             reduce using rule 10 (instruccion -> while_instr .)
    RWHILE          reduce using rule 10 (instruccion -> while_instr .)
    RBREAK          reduce using rule 10 (instruccion -> while_instr .)
    RMAIN           reduce using rule 10 (instruccion -> while_instr .)
    RFUNC           reduce using rule 10 (instruccion -> while_instr .)
    RINT            reduce using rule 10 (instruccion -> while_instr .)
    RDOUBLE         reduce using rule 10 (instruccion -> while_instr .)
    RCHAR           reduce using rule 10 (instruccion -> while_instr .)
    RSTRING         reduce using rule 10 (instruccion -> while_instr .)
    RVAR            reduce using rule 10 (instruccion -> while_instr .)
    RBOOLEAN        reduce using rule 10 (instruccion -> while_instr .)
    $end            reduce using rule 10 (instruccion -> while_instr .)
    LLAVEC          reduce using rule 10 (instruccion -> while_instr .)


state 11

    (11) instruccion -> break_instr . finins
    (15) finins -> . PUNTOCOMA
    (16) finins -> .

    PUNTOCOMA       shift and go to state 32
    error           reduce using rule 16 (finins -> .)
    RPRINT          reduce using rule 16 (finins -> .)
    ID              reduce using rule 16 (finins -> .)
    RIF             reduce using rule 16 (finins -> .)
    RWHILE          reduce using rule 16 (finins -> .)
    RBREAK          reduce using rule 16 (finins -> .)
    RMAIN           reduce using rule 16 (finins -> .)
    RFUNC           reduce using rule 16 (finins -> .)
    RINT            reduce using rule 16 (finins -> .)
    RDOUBLE         reduce using rule 16 (finins -> .)
    RCHAR           reduce using rule 16 (finins -> .)
    RSTRING         reduce using rule 16 (finins -> .)
    RVAR            reduce using rule 16 (finins -> .)
    RBOOLEAN        reduce using rule 16 (finins -> .)
    $end            reduce using rule 16 (finins -> .)
    LLAVEC          reduce using rule 16 (finins -> .)

    finins                         shift and go to state 37

state 12

    (12) instruccion -> main_instr .

    error           reduce using rule 12 (instruccion -> main_instr .)
    RPRINT          reduce using rule 12 (instruccion -> main_instr .)
    ID              reduce using rule 12 (instruccion -> main_instr .)
    RIF             reduce using rule 12 (instruccion -> main_instr .)
    RWHILE          reduce using rule 12 (instruccion -> main_instr .)
    RBREAK          reduce using rule 12 (instruccion -> main_instr .)
    RMAIN           reduce using rule 12 (instruccion -> main_instr .)
    RFUNC           reduce using rule 12 (instruccion -> main_instr .)
    RINT            reduce using rule 12 (instruccion -> main_instr .)
    RDOUBLE         reduce using rule 12 (instruccion -> main_instr .)
    RCHAR           reduce using rule 12 (instruccion -> main_instr .)
    RSTRING         reduce using rule 12 (instruccion -> main_instr .)
    RVAR            reduce using rule 12 (instruccion -> main_instr .)
    RBOOLEAN        reduce using rule 12 (instruccion -> main_instr .)
    $end            reduce using rule 12 (instruccion -> main_instr .)
    LLAVEC          reduce using rule 12 (instruccion -> main_instr .)


state 13

    (13) instruccion -> funcion_instr .

    error           reduce using rule 13 (instruccion -> funcion_instr .)
    RPRINT          reduce using rule 13 (instruccion -> funcion_instr .)
    ID              reduce using rule 13 (instruccion -> funcion_instr .)
    RIF             reduce using rule 13 (instruccion -> funcion_instr .)
    RWHILE          reduce using rule 13 (instruccion -> funcion_instr .)
    RBREAK          reduce using rule 13 (instruccion -> funcion_instr .)
    RMAIN           reduce using rule 13 (instruccion -> funcion_instr .)
    RFUNC           reduce using rule 13 (instruccion -> funcion_instr .)
    RINT            reduce using rule 13 (instruccion -> funcion_instr .)
    RDOUBLE         reduce using rule 13 (instruccion -> funcion_instr .)
    RCHAR           reduce using rule 13 (instruccion -> funcion_instr .)
    RSTRING         reduce using rule 13 (instruccion -> funcion_instr .)
    RVAR            reduce using rule 13 (instruccion -> funcion_instr .)
    RBOOLEAN        reduce using rule 13 (instruccion -> funcion_instr .)
    $end            reduce using rule 13 (instruccion -> funcion_instr .)
    LLAVEC          reduce using rule 13 (instruccion -> funcion_instr .)


state 14

    (14) instruccion -> llamada_instr . finins
    (15) finins -> . PUNTOCOMA
    (16) finins -> .

    PUNTOCOMA       shift and go to state 32
    error           reduce using rule 16 (finins -> .)
    RPRINT          reduce using rule 16 (finins -> .)
    ID              reduce using rule 16 (finins -> .)
    RIF             reduce using rule 16 (finins -> .)
    RWHILE          reduce using rule 16 (finins -> .)
    RBREAK          reduce using rule 16 (finins -> .)
    RMAIN           reduce using rule 16 (finins -> .)
    RFUNC           reduce using rule 16 (finins -> .)
    RINT            reduce using rule 16 (finins -> .)
    RDOUBLE         reduce using rule 16 (finins -> .)
    RCHAR           reduce using rule 16 (finins -> .)
    RSTRING         reduce using rule 16 (finins -> .)
    RVAR            reduce using rule 16 (finins -> .)
    RBOOLEAN        reduce using rule 16 (finins -> .)
    $end            reduce using rule 16 (finins -> .)
    LLAVEC          reduce using rule 16 (finins -> .)

    finins                         shift and go to state 38

state 15

    (17) instruccion -> error . PUNTOCOMA

    PUNTOCOMA       shift and go to state 39


state 16

    (20) imprimir_instr -> RPRINT . PARA expresion PARC PUNTOCOMA
    (21) imprimir_instr -> RPRINT . PARA expresion PARC

    PARA            shift and go to state 40


state 17

    (22) declaracion_instr -> tipo . ID IGUAL expresion
    (23) declaracion2_instr -> tipo . ID

    ID              shift and go to state 41


state 18

    (24) asignacion_instr -> ID . IGUAL expresion
    (25) asignacion2_instr -> ID . expresion
    (31) llamada_instr -> ID . PARA PARC
    (38) expresion -> . expresion MAS expresion
    (39) expresion -> . expresion MENOS expresion
    (40) expresion -> . expresion POR expresion
    (41) expresion -> . expresion DIV expresion
    (42) expresion -> . expresion POT expresion
    (43) expresion -> . expresion MOD expresion
    (44) expresion -> . expresion MENORQUE expresion
    (45) expresion -> . expresion MAYORQUE expresion
    (46) expresion -> . expresion MENORIGUAL expresion
    (47) expresion -> . expresion MAYORIGUAL expresion
    (48) expresion -> . expresion DIFERENTE expresion
    (49) expresion -> . expresion IGUALIGUAL expresion
    (50) expresion -> . expresion AND expresion
    (51) expresion -> . expresion OR expresion
    (52) expresion -> . expresion INCREMENTO
    (53) expresion -> . expresion DECREMENTO
    (54) expresion -> . MENOS expresion
    (55) expresion -> . NOT expresion
    (56) expresion -> . PARA expresion PARC
    (57) expresion -> . ID
    (58) expresion -> . ENTERO
    (59) expresion -> . DECIMAL
    (60) expresion -> . CADENA
    (61) expresion -> . CHARACTER
    (62) expresion -> . BOOLEANO
    (63) expresion -> . RNULL
    (64) expresion -> . INCREMENTO
    (65) expresion -> . DECREMENTO

    IGUAL           shift and go to state 43
    PARA            shift and go to state 45
    MENOS           shift and go to state 46
    NOT             shift and go to state 49
    ID              shift and go to state 42
    ENTERO          shift and go to state 50
    DECIMAL         shift and go to state 51
    CADENA          shift and go to state 52
    CHARACTER       shift and go to state 53
    BOOLEANO        shift and go to state 54
    RNULL           shift and go to state 55
    INCREMENTO      shift and go to state 47
    DECREMENTO      shift and go to state 48

    expresion                      shift and go to state 44

state 19

    (26) if_instr -> RIF . PARA expresion PARC LLAVEA instrucciones LLAVEC
    (27) if_instr -> RIF . PARA expresion PARC LLAVEA instrucciones LLAVEC RELSE LLAVEA instrucciones LLAVEC
    (28) if_instr -> RIF . PARA expresion PARC LLAVEA instrucciones LLAVEC RELSE if_instr

    PARA            shift and go to state 56


state 20

    (18) while_instr -> RWHILE . PARA expresion PARC LLAVEA instrucciones LLAVEC

    PARA            shift and go to state 57


state 21

    (19) break_instr -> RBREAK .

    PUNTOCOMA       reduce using rule 19 (break_instr -> RBREAK .)
    error           reduce using rule 19 (break_instr -> RBREAK .)
    RPRINT          reduce using rule 19 (break_instr -> RBREAK .)
    ID              reduce using rule 19 (break_instr -> RBREAK .)
    RIF             reduce using rule 19 (break_instr -> RBREAK .)
    RWHILE          reduce using rule 19 (break_instr -> RBREAK .)
    RBREAK          reduce using rule 19 (break_instr -> RBREAK .)
    RMAIN           reduce using rule 19 (break_instr -> RBREAK .)
    RFUNC           reduce using rule 19 (break_instr -> RBREAK .)
    RINT            reduce using rule 19 (break_instr -> RBREAK .)
    RDOUBLE         reduce using rule 19 (break_instr -> RBREAK .)
    RCHAR           reduce using rule 19 (break_instr -> RBREAK .)
    RSTRING         reduce using rule 19 (break_instr -> RBREAK .)
    RVAR            reduce using rule 19 (break_instr -> RBREAK .)
    RBOOLEAN        reduce using rule 19 (break_instr -> RBREAK .)
    $end            reduce using rule 19 (break_instr -> RBREAK .)
    LLAVEC          reduce using rule 19 (break_instr -> RBREAK .)


state 22

    (29) main_instr -> RMAIN . PARA PARC LLAVEA instrucciones LLAVEC

    PARA            shift and go to state 58


state 23

    (30) funcion_instr -> RFUNC . ID PARA PARC LLAVEA instrucciones LLAVEC

    ID              shift and go to state 59


state 24

    (32) tipo -> RINT .

    ID              reduce using rule 32 (tipo -> RINT .)


state 25

    (33) tipo -> RDOUBLE .

    ID              reduce using rule 33 (tipo -> RDOUBLE .)


state 26

    (34) tipo -> RCHAR .

    ID              reduce using rule 34 (tipo -> RCHAR .)


state 27

    (35) tipo -> RSTRING .

    ID              reduce using rule 35 (tipo -> RSTRING .)


state 28

    (36) tipo -> RVAR .

    ID              reduce using rule 36 (tipo -> RVAR .)


state 29

    (37) tipo -> RBOOLEAN .

    ID              reduce using rule 37 (tipo -> RBOOLEAN .)


state 30

    (2) instrucciones -> instrucciones instruccion .

    error           reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RPRINT          reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    ID              reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RIF             reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RWHILE          reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RBREAK          reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RMAIN           reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RFUNC           reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RINT            reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RDOUBLE         reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RCHAR           reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RSTRING         reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RVAR            reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RBOOLEAN        reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    $end            reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    LLAVEC          reduce using rule 2 (instrucciones -> instrucciones instruccion .)


state 31

    (4) instruccion -> imprimir_instr finins .

    error           reduce using rule 4 (instruccion -> imprimir_instr finins .)
    RPRINT          reduce using rule 4 (instruccion -> imprimir_instr finins .)
    ID              reduce using rule 4 (instruccion -> imprimir_instr finins .)
    RIF             reduce using rule 4 (instruccion -> imprimir_instr finins .)
    RWHILE          reduce using rule 4 (instruccion -> imprimir_instr finins .)
    RBREAK          reduce using rule 4 (instruccion -> imprimir_instr finins .)
    RMAIN           reduce using rule 4 (instruccion -> imprimir_instr finins .)
    RFUNC           reduce using rule 4 (instruccion -> imprimir_instr finins .)
    RINT            reduce using rule 4 (instruccion -> imprimir_instr finins .)
    RDOUBLE         reduce using rule 4 (instruccion -> imprimir_instr finins .)
    RCHAR           reduce using rule 4 (instruccion -> imprimir_instr finins .)
    RSTRING         reduce using rule 4 (instruccion -> imprimir_instr finins .)
    RVAR            reduce using rule 4 (instruccion -> imprimir_instr finins .)
    RBOOLEAN        reduce using rule 4 (instruccion -> imprimir_instr finins .)
    $end            reduce using rule 4 (instruccion -> imprimir_instr finins .)
    LLAVEC          reduce using rule 4 (instruccion -> imprimir_instr finins .)


state 32

    (15) finins -> PUNTOCOMA .
